--- a/ejercicio5/ejercicio5examen.html
+++ b/ejercicio5/ejercicio5examen.html
@@ -5,15 +5,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
+   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
   
 </head>
 
 <body>
     <script src="ejercicio5.js"></script>
     <div id="container">
-        <select id="opciones">
+        <select id="opciones" class="form-control">
         </select>
-        <table border="1">
+        <table border="1" class="table table-striped">
             <thead>
                 <tr>
                     <td>MACROAREA</td>
