--- a/actividad 4/main.html
+++ b/actividad 4/main.html
@@ -5,13 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link rel="stylesheet" href="">
+   
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="main.js"></script>
-  
+
+
 </head>
 
 <body>
-    <h1>hola que tal</h1>
+    <script src="main.js"></script>
+    <div id="menu">
+
+
+
+
+    </div>
 </body>
 </html>
 
