--- a/ejercicioGatos/index.html
+++ b/ejercicioGatos/index.html
@@ -6,20 +6,27 @@
         <title>gatos</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="main.css">
     </head>
     <body>
         
         <script src="main.js"></script>
 
         <h1>gatetes</h1>
+        <select  id="sexo"></select>
+        <select  id="castrado"></select>
+        <select  id="raza"></select>
+        <form >introduce el nombre
+            <input id="nombre">
+        </form>
+
 
         <div id="etiquetas"></div>
 
-        <div id="contenedor">
+        <nav id="contenedor">
 
 
             
-        </div>
+        </nav>
     </body>
 </html>
