ejercicio comparar letras

--- a/ejercicioPractico9-5-2019/index.html
+++ b/ejercicioPractico9-5-2019/index.html
@@ -4,21 +4,16 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
-       
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>emparejados</title>
+        <title></title>
         <meta name="description" content="">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="">
     </head>
     <body>
-            <script src="main.js"></script>
-            <div>CONTADOR DE PAREJAS: </div>
-            <div id="container"></div>
-            <div id="contadorParejas"></div>
-            <div id="contenedor">
-            </div>
+        <script src="main.js" async defer></script>
+
+        <button type="button" value="comenzar" id="btn_inicio">comenzar</button>
     </body>
 </html>
