--- a/ejercicio4Marzo/ej4.html
+++ b/ejercicio4Marzo/ej4.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="author" content="Javier Soriano">
-    <!-- EXAMEN FEBRERO 2019 DWEC IES SANTIAGO HERNÁNDEZ -->
-    <!-- NO MODIFIQUE ESTE ARCHIVO 
+	<head>
+        <meta charset="UTF-8">
+        <meta name="author" content="Javier Soriano">
+        <!-- EXAMEN FEBRERO 2019 DWEC IES SANTIAGO HERNÁNDEZ -->
+        <!-- NO MODIFIQUE ESTE ARCHIVO 
              Sólo debe borrar el código de ejemplo   -->
-    <!-- Eval 1 - Ejercicio 4 -->
-    <script src="ej4.js"></script>
-</head>
-
-<body>
-    <form id="f1">
-        <label>Nombre: <input type="text" name="nombre" id="nombre"></label>
-        <label>Apellidos: <input type="text" name="apellidos" id="apellidos"></label>
-        <label>E-mail: <input type="text" name="email" id="email"></label>
-        <input type="button" name="btn1" id="btn1" value="GUARDAR">
-
-    </form>
-    <hr>
-    <div id="resultados">
+        <!-- Eval 1 - Ejercicio 4 -->
+        <script src="main.js"></script>
+	</head>
+	<body>
+		<form id="f1">
+            <label>Nombre: <input type="text" name="nombre" id="nombre"></label>
+            <label>Apellidos: <input type="text" name="apellidos" id="apellidos"></label>
+            <label>E-mail: <input type="text" name="email" id="email"></label>
+            <input type="button" name="btn1" id="btn1" value="GUARDAR">            
+        
+        </form>
+		<hr>
+        <div id="resultados">
         <!-- Código de ejemplo -->
         <!-- Borre este contenido, es solo una muestra 
         <div class="contenedor">
@@ -38,7 +36,6 @@
         </div>
         <hr>
         <!-- Fin del código de ejemplo -->
-    </div>
-</body>
-
+        </div>
+	</body>
 </html>
